syntax = "proto3";
package porcupine;

option csharp_namespace = "Porcupine";

service AntimalwareService {
  rpc ScanFolder (ScanFolderRequest) returns (ScanFolderResponse);
}

message ScanFolderRequest {
  string path = 1;
}

message ScanFolderResponse {
  string antivirus_info = 1;  
  repeated InfectedFile infected_files = 2;
}

message InfectedFile {
    string file_name = 1;  
    string malware_name = 2;
}
