syntax = "proto3";
package porcupine;

option csharp_namespace = "Porcupine";
import "google/protobuf/timestamp.proto";

service StorageService {
  rpc CopyFile (CopyFileRequest) returns (CopyFileResponse);
  rpc CopyFolder (CopyFolderRequest) returns (stream CopyFolderResponse);
}

message CopyFileRequest {
  string source = 1;
  string target = 2;
  bool copy_permissions = 3;
}

message CopyFileResponse {
  string path = 1;  
}

message CopyFolderRequest {
  string source = 1;
  string target = 2;
}

message CopyFolderResponse {
  string file_name = 1;
  google.protobuf.Timestamp creation_timestamp = 2;
}
