using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;
using Grpc.Core;
using Microsoft.Extensions.Logging;
using System.IO;
using Google.Protobuf.Collections;

namespace Porcupine.Agent
{
    public class AntimalwareService : Porcupine.AntimalwareService.AntimalwareServiceBase
    {
        private readonly ILogger<AntimalwareService> _logger;
        public AntimalwareService(ILogger<AntimalwareService> logger)
        {
            _logger = logger;
        }

        public override Task<ScanFolderResponse> ScanFolder(ScanFolderRequest request, ServerCallContext context)
        {
            _logger.LogDebug($"Scanning folder {request.Path}...");
            return Task.Run(() => 
            {
                var response = new ScanFolderResponse()
                {
                    AntivirusInfo = "The Incredible Antivirus v0.9 alpha"
                };

                var directory = new DirectoryInfo(request.Path);
                var files = directory.GetFiles();
                foreach(var file in files)
                {
                    response.InfectedFiles.Add(new InfectedFile
                    { 
                        FileName = file.Name,
                        MalwareName = "LockerYoga"
                    });
                }

                _logger.LogDebug($"Scan result: {response}");
                return response;
            });
        }
    }
}
